# chakbandhi_back

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: develop.yml  pr.yml
backend/: base_test.py  manage.py  pytest.ini
backend/config/: .env.template
backend/drone_destination/: asgi.py  authentications.py  base_admin.py  base_model.py  celery.py  codes.py  exceptions.py  mixins.py  otp_sender.py  pagination.py  renderers.py  urls.py  wsgi.py
backend/drone_destination/settings/: __init__.py
backend/drone_destination/settings/components/: __init__.py  common.py
backend/drone_destination/settings/environments/: development.py  production.py
backend/users/: admin.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/users/migrations/: 0001_initial.py
backend/utils/: date.py
